Alterado local para destinos no swagger.
