# src/controllers/Destinocontroller.js
@@ -197,10 +197,10 @@ class DestinoController {
            in: 'body',
              description: 'Adiciona um novo Destino',
              schema:{
-                 $id_usuario: 1,
-                 $localidade_destino: "Praias de Floripa",
-                 $uf_destino: "SC",
-                 $nome_destino: "no do destino",
+        $nome_destino:"Praia do Canto",
+        $cep_destino:"88190000",
+        $img_destino:"url_img/teste.com",
+        $descricao_destino:"Lugar muito lindo"
              }
          }
          #swagger.summary = 'Cadastrar Novo Destino'
